# rustipy

./: LICENSE  README.md  README_en.md  pyproject.toml
rustipy/: __init__.py  app.py  crates.py  main.py
rustipy/api/: api.py
tests/: test_crates.py
tests/api/: test_api.py
